--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
 
     <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
+    {{ form_start(createImageForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
@@ -17,5 +17,5 @@
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+    {{ form_end(createImageForm) }}
 {% endblock %}
